<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="kh_cancel">取消</string>
    <string name="kh_entering_meeting">进入会议中</string>
    <string name="kh_leave_meeting">离开会议</string>
    <string name="kh_finish_meeting">结束会议</string>

    <string name="kh_host">主持人:</string>
    <string name="kh_meeting_no">会议号:</string>
    <string name="kh_meeting_elapsed">已开会:</string>


    <string name="kh_expand">展开</string>
    <string name="kh_shrink">收起</string>
    <string name="kh_microphone">麦克风</string>
    <string name="kh_camera">摄像头</string>
    <string name="kh_chat">聊天</string>
    <string name="kh_attender">参会人</string>
    <string name="kh_placement">布局</string>

    <string name="kh_host_ask">主持人邀请您</string>
    <string name="kh_host_ask_cancel_mute">开启语音</string>
    <string name="kh_host_ask_start_video">开启视频</string>
    <string name="kh_accept">好的</string>
    <string name="kh_accept_later">稍后开启</string>
</resources>