<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/leave_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kh_bg_meeting_menu_item"
        android:text="@string/kh_leave_meeting"
        android:textColor="#fff" />

    <Button
        android:id="@+id/finish_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kh_bg_meeting_menu_item"
        android:text="@string/kh_finish_meeting"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kh_bg_meeting_menu_item"
        android:text="@string/kh_cancel"
        android:textColor="#fff" />
</LinearLayout>